--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ header button {
   display: inline-block;
   width: 93px;
   height: 30px;
-  background-color: #318CE7;
+  background-color: #4486f9;
   color: white;
   font-size: 13px;
   border-radius: 2px;
@@ -51,7 +51,7 @@ header button {
 
 
 
-input { /*Ma barre pour entrer la recherche*/
+input { /*Ma barre de recherche*/
   width: 585.5px;
   height: 45px;
   margin-top: 20px;
@@ -66,8 +66,8 @@ input { /*Ma barre pour entrer la recherche*/
 .LeftButton {
   float: left;
   margin-left: 520px;
-  margin-top: 15px;
-  background-color: #EFEFEF;
+  margin-top: 30px;
+  background-color: #f5f5f5;
   height: 35px;
   width: 150px;
   border: 1px ridge #EFEFEF;
@@ -80,8 +80,8 @@ input { /*Ma barre pour entrer la recherche*/
 .RightButton {
   float: right;
   margin-right: 520px;
-  margin-top: 15px;
-  background-color: #EFEFEF;
+  margin-top: 30px;
+  background-color: #f5f5f5;
   height: 35px;
   width: 150px;
   border: 1px ridge #EFEFEF;
@@ -91,15 +91,13 @@ input { /*Ma barre pour entrer la recherche*/
   font-size: 13px;
 }
 
-
-
 footer {
   width: 1345px;
   height:37px;
-  background-color: #EFEFEF;
-  margin-top: 160px;
+  background-color: #f5f5f5;
+  margin-top: 155px;
   border: 1px ridge #DCDCDC;
-  font-size: 12px;
+  font-size: 13px;
   font-family: Arial;
   color: #798081;
 }
@@ -108,28 +106,26 @@ footer {
   width: 300px;
   margin: 7px 0 0 5px;
   display: inline-block;
-
 }
 
 .pLeft {
   width: auto;
-  font-size: 12px;
+  text-decoration: none;
+  font-size: 13px;
   display: inline-block;
   margin: 5px 16px 6px 16px;
-
 }
 
 .right { /*Concerne les mots en pied de page à droite*/
-  width: auto;
-  margin: -30px 0 0 915px;
+  width: 430px;
+  margin: -35px 0 0 905px;
   display: inline-block;
-
 }
 
 .pRight {
   width: auto;
+  text-decoration: none;
   font-size: 13px;
   display: inline-block;
-  margin: 5px 11px 0 11px ;
-
+  margin: -5px 9px 10px 12px ;
 }
